实现消息通知模块